test/conformance/chainsaw/generating-policies/webhook/label-ownership/reserved-create.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: reserved-labels
  namespace: gpol-label-ownership
  labels:
    generate.kyverno.io/policy-name: gpol-label-ownership
