test/conformance/chainsaw/generating-policies/webhook/label-ownership/setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gpol-label-ownership
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: label-editor
  namespace: gpol-label-ownership
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: label-editor
  namespace: gpol-label-ownership
rules:
- apiGroups: [""]
  resources: ["configmaps"]
  verbs: ["get", "create", "update", "patch", "delete"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: label-editor
  namespace: gpol-label-ownership
subjects:
- kind: ServiceAccount
  name: label-editor
  namespace: gpol-label-ownership
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: label-editor
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno:gpol-label-ownership
  labels:
    rbac.kyverno.io/aggregate-to-background-controller: "true"
rules:
- apiGroups: [""]
  resources: ["configmaps"]
  verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
