test/conformance/chainsaw/generating-policies/webhook/label-ownership/user-owned.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: user-owned
  namespace: gpol-label-ownership-target
  labels:
    app.kubernetes.io/managed-by: kyverno
    generate.kyverno.io/clone-source: ""
data:
  value: original
